WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
48552
Mouse events never reach Flash in WebKit2 on Mac (asserts in Debug builds)
https://bugs.webkit.org/show_bug.cgi?id=48552
Summary
Mouse events never reach Flash in WebKit2 on Mac (asserts in Debug builds)
Adam Roben (:aroben)
Reported
2010-10-28 13:08:33 PDT
To reproduce: 1. Go to
http://youtube.com/
and try to interact with any video The video doesn't respond to any mouse events. In Debug builds, you'll get an assertion in ArgumentDecoder::decodeBytes: ASSERT(size == bufferSize); size is 56, bufferSize is 52
Attachments
Stop using encode/decodeBytes for WebEvent subclasses
(12.66 KB, patch)
2010-10-29 16:35 PDT
,
Adam Roben (:aroben)
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Roben (:aroben)
Comment 1
2010-10-28 13:12:48 PDT
This happens when handling a HandleMouseEnterEvent. Presumably the issue is that WebMouseEvent is 52 bytes in 32-bit builds, and 56 bytes in 64-bit builds. Perhaps this is due to different padding?
Adam Roben (:aroben)
Comment 2
2010-10-28 13:37:16 PDT
<
rdar://problem/8606571
>
Adam Roben (:aroben)
Comment 3
2010-10-28 13:37:58 PDT
Seems like we should add a WebEvent.cpp, or perhaps even WebMouseEvent.cpp/h!
Adam Roben (:aroben)
Comment 4
2010-10-29 16:35:38 PDT
Created
attachment 72415
[details]
Stop using encode/decodeBytes for WebEvent subclasses
Anders Carlsson
Comment 5
2010-10-29 16:38:45 PDT
Comment on
attachment 72415
[details]
Stop using encode/decodeBytes for WebEvent subclasses View in context:
https://bugs.webkit.org/attachment.cgi?id=72415&action=review
> WebKit2/Shared/WebKeyboardEvent.cpp:60 > + t.m_nativeVirtualKeyCode, t.m_isAutoRepeat, t.m_isKeypad, t.m_isSystemKey));
Not sure if it is, but this should all be on one line!
Early Warning System Bot
Comment 6
2010-10-29 16:46:34 PDT
Attachment 72415
[details]
did not build on qt: Build output:
http://queues.webkit.org/results/4853082
Adam Roben (:aroben)
Comment 7
2010-10-29 16:46:45 PDT
Committed
r70954
: <
http://trac.webkit.org/changeset/70954
>
Csaba Osztrogonác
Comment 8
2010-10-29 18:11:46 PDT
(In reply to
comment #6
)
>
Attachment 72415
[details]
did not build on qt: > Build output:
http://queues.webkit.org/results/4853082
Guys, it wasn't a fair-play game ... Qt EWS was red, but you committed the wrong patch, and the Qt build is broken since 1,5 hours ago. :-S
Csaba Osztrogonác
Comment 9
2010-10-31 05:55:34 PDT
(In reply to
comment #8
)
> (In reply to
comment #6
) > >
Attachment 72415
[details]
[details] did not build on qt: > > Build output:
http://queues.webkit.org/results/4853082
> > Guys, it wasn't a fair-play game ... Qt EWS was red, but > you committed the wrong patch, and the Qt build is broken > since 1,5 hours ago. :-S
Kling fixed it in
http://trac.webkit.org/changeset/70964
Adam Roben (:aroben)
Comment 10
2010-11-01 06:25:09 PDT
(In reply to
comment #9
)
> (In reply to
comment #8
) > > (In reply to
comment #6
) > > >
Attachment 72415
[details]
[details] [details] did not build on qt: > > > Build output:
http://queues.webkit.org/results/4853082
> > > > Guys, it wasn't a fair-play game ... Qt EWS was red, but > > you committed the wrong patch, and the Qt build is broken > > since 1,5 hours ago. :-S > > Kling fixed it in
http://trac.webkit.org/changeset/70964
Sorry for the trouble. I've been paying attention to the Qt-EWS in general, and find it extremely useful. I guess I wasn't thinking on this one. Thanks for cleaning up my mess!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug