WebKit2/Shared/WebEvent.cpp
@@ -27,6 +27,7 @@
 
 #include "ArgumentDecoder.h"
 #include "ArgumentEncoder.h"
+#include "Arguments.h"
 
 namespace WebKit {
 
@@ -39,21 +40,12 @@ WebEvent::WebEvent(Type type, Modifiers modifiers, double timestamp)
 
 void WebEvent::encode(CoreIPC::ArgumentEncoder* encoder) const
 {
-    encoder->encode(m_type);
-    encoder->encode(m_modifiers);
-    encoder->encode(m_timestamp);
+    encoder->encode(CoreIPC::In(m_type, m_modifiers, m_timestamp));
 }
 
 bool WebEvent::decode(CoreIPC::ArgumentDecoder* decoder, WebEvent& t)
 {
-    if (!decoder->decode(t.m_type))
-        return false;
-    if (!decoder->decode(t.m_modifiers))
-        return false;
-    if (!decoder->decode(t.m_timestamp))
-        return false;
-
-    return true;
+    return decoder->decode(CoreIPC::Out(t.m_type, t.m_modifiers, t.m_timestamp));
 }
     
 } // namespace WebKit
