WebKit2/Shared/WebTouchEvent.cpp
@@ -28,6 +28,7 @@
 #include "WebEvent.h"
 
 #include "ArgumentCoders.h"
+#include "Arguments.h"
 
 namespace WebKit {
 
@@ -45,18 +46,16 @@ WebTouchEvent::WebTouchEvent(WebEvent::Type type, Vector<WebPlatformTouchPoint> 
 void WebTouchEvent::encode(CoreIPC::ArgumentEncoder* encoder) const
 {
     WebEvent::encode(encoder);
-    encoder->encode(m_touchPoints);
+
+    encoder->encode(CoreIPC::In(m_touchPoints));
 }
 
 bool WebTouchEvent::decode(CoreIPC::ArgumentDecoder* decoder, WebTouchEvent& t)
 {
     if (!WebEvent::decode(decoder, t))
         return false;
-    
-    if (!decoder->decode(t.m_touchPoints))
-        return false;
-    
-    return true;
+
+    return decoder->decode(CoreIPC::Out(t.m_touchPoints));
 }
 
 bool WebTouchEvent::isTouchEventType(Type type)
